--- a/jasmine/SpecRunner.html
+++ b/jasmine/SpecRunner.html
@@ -12,14 +12,11 @@
   <script src="lib/jasmine-2.5.2/boot.js"></script>
 
   <!-- include source files here... -->
-  <script src="src/Player.js"></script>
-  <script src="src/Song.js"></script>
-  <script scr="src/fizzBuzz.js"></script>
+  <script type="text/javascript" src="src/fizzBuzz.js"></script>
 
   <!-- include spec files here... -->
-  <script src="spec/SpecHelper.js"></script>
-  <script src="spec/PlayerSpec.js"></script>
-  <script src="spec/fizzBuzzSpec.js"></script>
+  <script type="text/javascript" src="spec/SpecHelper.js"></script>
+  <script type="text/javascript" src="spec/fizzBuzzSpec.js"></script>
 
 </head>
 
